test/error/MethodVirtualPrivate.ci
public class Test
{
	virtual bool Run() //ERROR: virtual method cannot be private
	{
		return true;
	}
}
